chore: add --add-opens jvmArgs for Mockito on JDK17